# BCCAVT

./: BiliCookiesHelper.crx  开发目标.txt
.github/workflows/: release.yml
BiliCookiesHelper/: CHANGELOG.md  README.md  content-script.js  manifest.json  popup.html  popup.js  test-auto-start-fix.md  test-extension.html
new/: main.py  module_crawler.py  module_processor.py
new/bilibili_csv_output/: Zc血狼双人肉鸽超级胡局砍下5799超高分！商店从999取到0【魔法Zc目录&血狼破军】_comments_20250626_163521.csv  【梗百科】别笑 你试也过不了第二关是啥梗？_comments_20250626_162217.csv
new/bilibili_json_output/: Zc血狼双人肉鸽超级胡局砍下5799超高分！商店从999取到0【魔法Zc目录&血狼破军】_comments.json
new/v1/: module_cookie.py  module_crawler.py
new/v1/bilibili_cookie_output/: bilibili_cookies_full_20250626_144842.json  bilibili_cookies_full_20250626_161553.json  bilibili_credential_20250626_144842.json  bilibili_credential_20250626_161553.json
new/v2/: README.md  celery_app.py  fastapi_app.py  models.py
new/v3/: celery_app.py  models.py  pyproject.toml  worker_crawler.py
可视化/v3/: API_CONFIG.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
可视化/v3/src/app/: globals.css  layout.tsx  page.tsx
可视化/v3/src/app/crawler/: page.tsx
可视化/v3/src/components/: Toast.tsx  VisualizationComponent.tsx  VisualizationComponent_new.tsx  VisualizationComponent_old.tsx
可视化/v3/src/hooks/: useCrawlerStore.ts  useToast.ts
可视化/v3/src/lib/: apiClient.ts
可视化/v3/src/types/: comment.ts  cookie.ts  crawler.ts
可视化/v3/src/utils/: api.ts  commentDataProcessor.ts  dataStorage.ts
扩展/: background.js  content-script.js  popup.js
(+16 files in other folders)
